--- a/index.qmd
+++ b/index.qmd
@@ -7,7 +7,7 @@ listing:
   categories: true
   sort-ui: false
   filter-ui: false
-  feed: true
+  feed: false
 page-layout: full
 title-block-banner: false
 ---
